<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    tools:context=".view.ScrenChamadosActivity"
    android:background="@color/blue_ligth_one"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="16dp"
    app:cardCornerRadius="16dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_ligth"

        >

        <ImageView
            android:id="@+id/imageChamado"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_computer_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/textTitleChamado"
            android:layout_width="200dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/title_card_chamado"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageChamado"/>

        <TextView
            android:id="@+id/textDescChamado"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/text_desc_chamado"
            app:layout_constraintTop_toBottomOf="@+id/textTitleChamado"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/imageChamado"
            />

        <TextView
            android:id="@+id/textPrioridadeChamado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textPrioridadeChamado"
            app:layout_constraintTop_toBottomOf="@+id/imageChamado"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:id="@+id/textPrioridade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prioridade"
            app:layout_constraintTop_toBottomOf="@+id/imageChamado"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/textPrioridadeChamado"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            />
        <Button
            android:id="@+id/textDetalhes"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            style="@android:style/Widget.Material.Button.Borderless"
            android:text="@string/textDetalhes"
            app:layout_constraintTop_toBottomOf="@+id/imageChamado"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@android:color/black"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>