<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/blue_ligth_one"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/blue_ligth">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/atualizado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textNomeComentario"
                android:textAlignment="center"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/txtAtualizado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/text_date"
                android:textAlignment="viewEnd"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_comentario"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>