<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_ligth_one"
    tools:context=".view.MainActivity"
    android:orientation="vertical">

    <include layout="@layout/toolbar"></include>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:src="@drawable/icone_person_pc"

            />
        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="30dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:text="@string/sing_in"
            android:textSize="@dimen/text_medium"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTextLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewLogin"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/email"
            android:background="@drawable/left_circle"
            android:textColorHint="@color/white"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/editTextLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="15dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTextPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@+id/inputTextLogin"
            android:layout_marginStart="50dp"
            android:hint="@string/password"
            android:layout_marginEnd="50dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"            app:passwordToggleEnabled="true"
            android:textColorHint="@color/white"
            android:layout_marginTop="15dp"
            android:background="@drawable/left_circle">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHighlight="@color/black"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            app:layout_constraintTop_toBottomOf="@+id/inputTextPassword"
            app:layout_constraintEnd_toEndOf="parent"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small_small"/>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="300dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@+id/textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@drawable/button_dark"
            android:textSize="20sp"
            />
        <Button
            android:id="@+id/buttonCadastro"
            android:layout_width="300dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/textCadastro"
            android:textColor="@color/white"
            android:background="@drawable/button_dark"
            android:textSize="20sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
