<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ChamadoNewActivity"
    android:background="@color/blue_ligth_one"
    >

    <include layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/textTopScren"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_top_new_chamado"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="15dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputTextTitutloChamado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingTop="5dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@+id/textTopScren">

        <EditText
            android:id="@+id/textTituloChamado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textStyle="bold"
            android:maxLength="50"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/text_title_chamado"
            android:textSize="20sp"
            android:inputType="textCapWords"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputTextMotivoChamado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingTop="5dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@+id/inputTextTitutloChamado">

        <EditText
            android:id="@+id/txtMotivoChamado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textStyle="bold"
            android:maxLength="250"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/text_motivo_chamado"
            android:textSize="20sp"
            android:inputType="textCapWords"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textCatetoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/inputTextMotivoChamado"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/text_categoria"
        android:textSize="18sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerCateria"
        app:layout_constraintTop_toBottomOf="@+id/textCatetoria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:entries="@array/categorias"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        style="@style/Widget.AppCompat.Spinner.Underlined"/>


</androidx.constraintlayout.widget.ConstraintLayout>