<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.NewUser"
    android:background="@color/blue_ligth_one"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:id="@+id/cadastroFoto"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >
        <ImageView
            android:id="@+id/fotoPerfilUsuario"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_baseline_photo_camera_24"
            android:background="@color/blue_ligth"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonAbrirGaleria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="20dp"
            android:src="@drawable/ic_baseline_photo_camera_24"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputTextCadastroNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:textColorHint="@color/white"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:paddingTop="5dp"
                    android:background="@drawable/left_circle"
                    android:layout_marginBottom="15dp">

                    <EditText
                        android:id="@+id/cadastroNome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp"
                        android:hint="@string/first_name"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputTextCadastroNomeUltimo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/left_circle"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:paddingTop="5dp"
                    android:textColorHint="@color/white"
                    android:layout_marginBottom="15dp">

                    <EditText
                        android:id="@+id/cadastroUltimoNome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp"
                        android:hint="@string/last_name"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputTextcadastroEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:textColorHint="@color/white"
                    android:background="@drawable/left_circle"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:paddingTop="5dp"
                    android:layout_marginBottom="15dp">

                    <EditText
                        android:id="@+id/cadastroEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textSize="20sp"
                        android:hint="Digite seu email"
                        android:inputType="textEmailAddress"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputTextcadastroSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:textColorHint="@color/white"
                    android:background="@drawable/left_circle"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:paddingTop="5dp">

                    <EditText
                        android:id="@+id/cadastroSenha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:hint="A senha deve ter acima de 6"
                        android:inputType="textPassword"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputTextCadastroDataNascimento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:textColorHint="@color/white"
                    android:background="@drawable/left_circle"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:paddingTop="5dp"
                    android:layout_marginBottom="15dp">

                    <EditText
                        android:id="@+id/cadastroDataNascimento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textSize="20sp"
                        android:hint="@string/nascimento"
                        android:layout_marginRight="15dp"
                        android:inputType="date|text"
                        android:layout_marginLeft="15dp"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:textColorHint="@color/white"
                    android:background="@drawable/left_circle"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:paddingTop="5dp"
                    android:layout_marginBottom="15dp">

                    <Spinner
                        android:id="@+id/cadastroSpinnerEstado"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:padding="20dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp"
                        style="@style/Widget.AppCompat.Spinner.Underlined"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonCadastro"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/resgistro"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:background="@drawable/left_circle"
                    />
            </LinearLayout>


        </ScrollView>

    </LinearLayout>

</LinearLayout>